Fixed diagram label cutoff and resolution

--- a/static/style.css
+++ b/static/style.css
@@ -25,11 +25,6 @@ div {
     text-align: center;
 }
 
-
-#dashboard {
-}
-
 #goldDiff {
-    width: 80%;
-    height: 80%;
+    width: 100%;
 }
